// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with city name and forecast 1`] = `
<View
  style={
    Object {
      "flex": 2,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 40,
          },
          Object {
            "color": "#66ff33",
          },
        ]
      }
    >
      Schenectady
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-evenly",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontSize": 20,
            },
            Object {
              "fontWeight": "bold",
            },
            Object {
              "marginLeft": 15,
            },
            Object {
              "color": "#66ff33",
            },
          ]
        }
      >
        Condition:
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontSize": 20,
            },
            Object {
              "fontWeight": "bold",
            },
            Object {
              "marginLeft": 15,
            },
            Object {
              "color": "#66ff33",
            },
          ]
        }
      >
        Temperature:
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-evenly",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontSize": 20,
            },
            Object {
              "marginRight": 30,
            },
            Object {
              "color": "#66ff33",
            },
          ]
        }
      >
        clear sky
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontSize": 20,
            },
            Object {
              "marginRight": 30,
            },
            Object {
              "color": "#66ff33",
            },
          ]
        }
      >
        21.13 °F
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly with error message 1`] = `
<View
  style={
    Object {
      "flex": 2,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 40,
          },
          Object {
            "backgroundColor": "red",
            "borderRadius": 10,
            "color": "white",
            "fontSize": 20,
            "padding": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      Some error
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "row",
      }
    }
  />
</View>
`;
